--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,79 @@
-*{
+* {
     font-family: "Poppins", sans-serif;
 }
-::-webkit-scrollbar{
+
+/* preloader */
+
+
+/* src/Components/Preloader.css */
+
+.preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+.spinner {
+    /* border: 4px solid rgba(0, 0, 0, 0.1);
+    border-left-color: #000;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 1s linear infinite; */
+    /* width: 100%; */
+}
+
+@keyframes spin {
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+
+/* end preloader */
+::-webkit-scrollbar {
     width: 5px;
-  }
-  ::-webkit-scrollbar-track{
+}
+
+::-webkit-scrollbar-track {
     background-color: #000;
     border-radius: 5px;
-  }
-  ::-webkit-scrollbar-thumb{
+}
+
+::-webkit-scrollbar-thumb {
     background-color: #ccc;
     border-radius: 10px;
-  }
-  ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
-  }
-.nav-set{
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+.nav-set {
     list-style: none;
     margin: 50px 10px;
     padding: 0;
 }
-.nav-set li{
+
+.nav-set li {
     margin-bottom: 40px
 }
-.nav-set li a{
+
+.nav-set li a {
     text-decoration: none;
     font-size: 22px;
     font-weight: 500;
     color: #000;
     position: relative;
 }
+
 .nav-set li a::before {
     content: "";
     position: absolute;
@@ -46,10 +90,11 @@
     transform: scale(1);
     transition: 0.7s;
 }
-.q-set{
+
+.q-set {
     position: absolute;
     top: 7px;
-    right:33px;
+    right: 33px;
     background-color: #f9be20;
     width: 20px;
     height: 20px;
@@ -59,21 +104,25 @@
     border-radius: 50%;
     color: white;
 }
-.main-bg{
+
+.main-bg {
     background-image: url('https://themewagon.github.io/lighten/images/banner2.jpg');
-   /* min-width: 99vw; */
+    /* min-width: 99vw; */
     background-size: cover;
     background-repeat: no-repeat;
     /* background-position: right center; */
-    
+
 }
-.main-set h1{
+
+.main-set h1 {
     font-size: 5vw;
 }
-.m-set{
+
+.m-set {
     margin: 10px 70px;
 }
-.main-set button{
+
+.main-set button {
     width: 250px;
     background: #ffc221;
     padding: 9px 0px;
@@ -86,19 +135,23 @@
     border: none;
     transition: 0.7s;
 }
-.main-set button:hover{
+
+.main-set button:hover {
     background-color: black;
     transition: 0.7s;
 }
-.why-choose h2{
+
+.why-choose h2 {
     font-size: 3vw;
     text-align: center;
     margin-top: 70px;
 }
-.why-choose h2 span{
+
+.why-choose h2 span {
     color: #ffc221;
 }
-.set-btn{
+
+.set-btn {
     margin: 0 auto;
     background: #fff;
     display: block;
@@ -110,93 +163,110 @@
     margin-top: 20px;
     transition: 0.7s;
 }
-.set-btn:hover{
+
+.set-btn:hover {
     background-color: #ffc221;
     transition: 0.7s;
 }
-.c-set{
+
+.c-set {
     box-shadow: 4px -1px 11px #ccc !important;
 }
-.product-box{
+
+.product-box {
     background: #ddd;
     text-align: center;
     margin-bottom: 30px;
     padding: 20px 10px;
     transition: 0.7s;
 }
-.product-box h3{
+
+.product-box h3 {
     color: #020000;
     font-weight: 500;
     font-size: 17px;
     line-height: 20px;
     padding-top: 15px;
 }
-.product-box span{
+
+.product-box span {
     color: #020000;
     font-weight: 500;
     font-size: 22px;
     line-height: 22px;
 }
-.product-box:hover{
+
+.product-box:hover {
     background-color: #f9be20;
     transition: 0.7s;
 }
-.bg1{
+
+.bg1 {
     background-image: url('../public/Assets/img/bg.jpg');
     background-repeat: no-repeat;
     background-size: 100% 100%;
 }
-.product-set{
+
+.product-set {
     background: #ffffffbd;
     box-shadow: #00000040 0px 0px 25px 0px;
     padding-top: 80px;
     padding-bottom: 60px;
 }
-.card-set{
+
+.card-set {
     border: 1px solid #ccc;
     box-shadow: -2px 1px 17px #ccc;
     padding: 40px 40px;
     text-align: center;
 }
-.card-set img{
+
+.card-set img {
     display: block;
     margin: auto;
 }
-.card-set h3{
+
+.card-set h3 {
     margin-top: 15px;
 }
 
 
 /* ````````````````````````````footer menu````````````````````````` */
-.i-set{
+.i-set {
     margin: 10px;
 }
-.i-set span i{
+
+.i-set span i {
     padding: 10px 20px;
     font-size: 25px;
     cursor: pointer;
     transition: 0.3s;
 }
-.i-set span i:hover{
+
+.i-set span i:hover {
     color: #f9be20;
     transition: 0.3s;
 }
-.footer-mennu ul{
+
+.footer-mennu ul {
     list-style: none;
     margin: 0;
     padding: 0;
 }
-.footer-mennu ul li{
+
+.footer-mennu ul li {
     margin-bottom: 9px;
 }
-.footer-mennu ul li a{
+
+.footer-mennu ul li a {
     text-decoration: none;
     color: #fff;
     font-size: 16px;
     transition: 0.5s;
 }
-.footer-mennu ul li a:hover{
-    color:#f9be20;
+
+.footer-mennu ul li a:hover {
+    color: #f9be20;
     transition: 0.5s;
 }
 
@@ -204,7 +274,7 @@
 
 /* ``````````````````````````````````````````blog````````````````````````````````````` */
 
-.card{
+.card {
     box-shadow: #ddd 0px 0px 8px 4px !important;
     border: none !important;
 }
@@ -212,7 +282,7 @@
 
 /* ````````````````````````````````contecut`````````````````````````` */
 
-.form-control{
+.form-control {
     border: 2px solid #f9be20 !important;
     padding: 15px 10px !important;
 }
@@ -275,26 +345,26 @@
 
 /* `````````loader```````` */
 .loader_bg {
-	position: fixed;
-	z-index: 9999999;
-	background: #fff;
-	width: 100%;
-	height: 100%;
+    position: fixed;
+    z-index: 9999999;
+    background: #fff;
+    width: 100%;
+    height: 100%;
 }
 
 .loader {
-	height: 100%;
-	width: 100%;
-	position: absolute;
-	left: 0;
-	top: 0;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .loader img {
-	width: 280px;
+    width: 280px;
 }
 
 
@@ -302,16 +372,18 @@
 
 /* ```````````````````media quary``````` */
 
-@media(max-width:575px){
+@media(max-width:575px) {
+
     /* .m1-set{
         margin: 10px 30px !important;
     } */
-    .main-set button{
+    .main-set button {
         width: 180px;
     }
-    .main-set p{
+
+    .main-set p {
         font-size: 13px;
         width: 200px;
     }
-    
+
 }
