--- a/src/App.css
+++ b/src/App.css
@@ -280,7 +280,7 @@
 }
 
 
-/* ````````````````````````````````contecut`````````````````````````` */
+/* ````````````````````````````````contec n, t`````````````````````````` */
 
 .form-control {
     border: 2px solid #f9be20 !important;
