--- a/public/Assets/css/profile.css
+++ b/public/Assets/css/profile.css
@@ -6,6 +6,7 @@
     border: 1px solid #ddd;
     border-radius: 4px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 50px;
   }
   
   input {
@@ -22,7 +23,7 @@
     width: 100%;
     border: none;
     border-radius: 4px;
-    background-color: yellow;
+    background-color: #f9be20;
     color: #000;
     cursor: pointer;
     
@@ -31,5 +32,6 @@
   .login-btn:hover {
     background-color: #000;
     color: #fff;
+    transition: 0.8s;
   }
   
