--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
     z-index: 9999;
 }
 
-.spinner {
+.spinner{
     /* border: 4px solid rgba(0, 0, 0, 0.1);
     border-left-color: #000;
     border-radius: 50%;
@@ -107,10 +107,11 @@
 
 .main-bg {
     background-image: url('https://themewagon.github.io/lighten/images/banner2.jpg');
-    /* min-width: 99vw; */
     background-size: cover;
     background-repeat: no-repeat;
-    /* background-position: right center; */
+    background-position: center center;
+    min-height: 70vh; /* Ensure it covers the full height of the viewport */
+    width: 100%;
 
 }
 
@@ -142,7 +143,7 @@
 }
 
 .why-choose h2 {
-    font-size: 3vw;
+    font-size: 4vw;
     text-align: center;
     margin-top: 70px;
 }
@@ -150,7 +151,9 @@
 .why-choose h2 span {
     color: #ffc221;
 }
-
+.why-choose h3{
+    font-size: 2vw;
+}
 .set-btn {
     margin: 0 auto;
     background: #fff;
@@ -374,9 +377,9 @@
 
 @media(max-width:575px) {
 
-    /* .m1-set{
-        margin: 10px 30px !important;
-    } */
+    .m1-set{
+        margin: 10px 60px !important;
+    }
     .main-set button {
         width: 180px;
     }
