--- a/src/App.css
+++ b/src/App.css
@@ -20,15 +20,6 @@
     z-index: 9999;
 }
 
-.spinner{
-    /* border: 4px solid rgba(0, 0, 0, 0.1);
-    border-left-color: #000;
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    animation: spin 1s linear infinite; */
-    /* width: 100%; */
-}
 
 @keyframes spin {
     to {
@@ -55,7 +46,39 @@
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
-
+.nav-set-main{
+    list-style: none;
+    margin: 16px 0px;
+    /* padding: 10px 10px; */
+    text-align: center;
+}
+.nav-set-main li{
+    margin-bottom: 10px;
+    display: inline-block;
+}
+.nav-set-main a{
+    text-decoration: none;
+    font-size: 17px;
+    color: #000;
+    font-weight: 500;
+    padding: 10px 10px;
+    position: relative;
+}
+.nav-set-main a::before{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    background-color: #000;
+    transform: scale(0);
+    transition: 0.7s;
+}
+.nav-set-main a:hover::before {
+    transform: scale(1);
+    transition: 0.7s;
+}
 .nav-set {
     list-style: none;
     margin: 50px 10px;
@@ -219,7 +242,7 @@
 
 .card-set {
     border: 1px solid #ccc;
-    box-shadow: -2px 1px 17px #ccc;
+    box-shadow: -2px 5px 17px #ccc;
     padding: 40px 40px;
     text-align: center;
 }
