--- a/public/Assets/css/login.css
+++ b/public/Assets/css/login.css
@@ -51,7 +51,7 @@
 .screen__background__shape2 {
 	height: 220px;
 	width: 220px;
-	background: #6C63AC;	
+	background: #fff;	
 	top: -172px;
 	right: 0;	
 	border-radius: 32px;
@@ -60,7 +60,7 @@
 .screen__background__shape3 {
 	height: 540px;
 	width: 190px;
-	background: linear-gradient(270deg, #5D54A4, #6A679E);
+	background: linear-gradient(270deg, #fff, #ffc107);
 	top: -24px;
 	right: 0;	
 	border-radius: 32px;
@@ -69,7 +69,7 @@
 .screen__background__shape4 {
 	height: 400px;
 	width: 200px;
-	background: #7E7BB9;	
+	background:  linear-gradient(270deg, #fff, #ffc107);	
 	top: 420px;
 	right: 50px;	
 	border-radius: 60px;
